--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,17 @@
          <artifactId>spring-security-test</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.mapstruct</groupId>
+         <artifactId>mapstruct</artifactId>
+         <version>1.6.2</version>
+      </dependency>
+      <dependency>
+         <groupId>org.mapstruct</groupId>
+         <artifactId>mapstruct-processor</artifactId>
+         <version>1.6.2</version>
+         <scope>provided</scope>
+      </dependency>
    </dependencies>
 
    <build>
@@ -101,6 +112,16 @@
                   <path>
                      <groupId>org.projectlombok</groupId>
                      <artifactId>lombok</artifactId>
+                  </path>
+                  <path>
+                     <groupId>org.mapstruct</groupId>
+                     <artifactId>mapstruct-processor</artifactId>
+                     <version>1.6.2</version>
+                  </path>
+                  <path>
+                     <groupId>org.projectlombok</groupId>
+                     <artifactId>lombok-mapstruct-binding</artifactId>
+                     <version>0.2.0</version>
                   </path>
                </annotationProcessorPaths>
             </configuration>
