Added MapStruts configuration

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
    </scm>
    <properties>
       <java.version>23</java.version>
+      <mapstruts.version>1.6.2</mapstruts.version>
    </properties>
    <dependencies>
       <dependency>
@@ -88,12 +89,12 @@
       <dependency>
          <groupId>org.mapstruct</groupId>
          <artifactId>mapstruct</artifactId>
-         <version>1.6.2</version>
+         <version>${mapstruts.version}</version>
       </dependency>
       <dependency>
          <groupId>org.mapstruct</groupId>
          <artifactId>mapstruct-processor</artifactId>
-         <version>1.6.2</version>
+         <version>${mapstruts.version}</version>
          <scope>provided</scope>
       </dependency>
    </dependencies>
@@ -116,7 +117,7 @@
                   <path>
                      <groupId>org.mapstruct</groupId>
                      <artifactId>mapstruct-processor</artifactId>
-                     <version>1.6.2</version>
+                     <version>${mapstruts.version}</version>
                   </path>
                   <path>
                      <groupId>org.projectlombok</groupId>
