--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,14 @@
          <version>${mapstruts.version}</version>
          <scope>provided</scope>
       </dependency>
+      <dependency>
+         <groupId>org.flywaydb</groupId>
+         <artifactId>flyway-core</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.flywaydb</groupId>
+         <artifactId>flyway-database-postgresql</artifactId>
+      </dependency>
    </dependencies>
 
    <build>
